[package]
name = "pyongyang-racer-tools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.5.0"
clap = { version = "^4.5.1", features = ["derive"] }
flate2 = "^1.0.28"
walkdir = "^2.4.0"
